--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
-venv
+./venv
+./__pycache__
+./api/__pycache__
+.config
+venv/
+__pycache__
+.editorconfig
+.eslintignore
+.eslintrc.js
+.gitignore
+.npmrc
+.postcssrc.js
+.prettierrc
+.vscode/
